test: 메뉴 서비스 테스트 getFirst 적용